--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,12 @@ dependencies {
     implementation group: 'net.java.dev.jna', name: 'jna-platform', version: '4.5.0'
 }
 
+
+java {
+    withSourcesJar()
+    withJavadocJar()
+}
+
 build {
     dependsOn shadowJar
 }
