--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'de.labystudio'
-version '1.0.5'
+version '1.0.6'
 
 compileJava {
     sourceCompatibility = '1.8'
@@ -18,6 +18,7 @@ repositories {
 dependencies {
     implementation group: 'net.java.dev.jna', name: 'jna', version: '4.5.0'
     implementation group: 'net.java.dev.jna', name: 'jna-platform', version: '4.5.0'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 }
 
 java {
