--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,14 @@ plugins {
 }
 
 group 'de.labystudio'
-version '1.0.7'
+version '1.0.8'
 
 compileJava {
+    sourceCompatibility = '1.8'
+    targetCompatibility = '1.8'
+}
+
+compileTestJava {
     sourceCompatibility = '1.8'
     targetCompatibility = '1.8'
 }
